--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/contrib/auto-render.min.js" type="text/javascript"></script>
 
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<!--    <script type="text/javascript" src="https://www.google.com/jsapi"></script> -->
 
 </head>
 <body>
@@ -26,7 +26,18 @@
 
 <div id="test">
 
-    $ABC$ -- треугольник
+    <p>
+    Пусть $ABC$ -- правильный треугольник с прямым углом $C$, $H$ -- основание высоты, опущенной на гипотенузу, $I_B$ и $I_A$ -- центры окружностей, вписанных в треугольники $HBC$.
+    <p>
+
+    <ol>
+        <li>
+            Докажите, что $\angle I_A H I_B = 90^\circ$
+        </li>
+        <li>
+            Докажите, что $\angle I_A H I_B = 90^\circ$
+        </li>
+    </ol>
 
 </div>
     <script>
