include new problems

--- a/index.html
+++ b/index.html
@@ -27,15 +27,28 @@
 <div id="test">
 
     <p>
-    Пусть $ABC$ -- правильный треугольник с прямым углом $C$, $H$ -- основание высоты, опущенной на гипотенузу, $I_B$ и $I_A$ -- центры окружностей, вписанных в треугольники $HBC$.
+    Пусть $ABC$ -- правильный треугольник с прямым углом $C$, $H$ -- основание высоты, опущенной на гипотенузу, $I_B$ и $I_A$ -- центры окружностей, вписанных в треугольники $HBC$ и $HAC$ соответственно.
     <p>
+
 
     <ol>
         <li>
-            Докажите, что $\angle I_A H I_B = 90^\circ$
+            <ol>
+                <li>
+                    Докажите, что $\angle I_A H I_B = 90^\circ$
+                </li>
+                <li>
+                    Докажите, что $\angle I_A С I_B = 45^\circ$
+                </li>
+            </ol>
         </li>
         <li>
-            Докажите, что $\angle I_A H I_B = 90^\circ$
+            Пусть $r_B$, $r_A$, $r$ -- радиусы окружностей, вписанных в $\triangle HBC$, $\triangle HAC$, $ABC$ соответственно. 
+            <ol>
+                <li>
+                     Докажите, что $\triangle ABC \sim \CBH \sim ACH$.
+                </li>
+            </ol>
         </li>
     </ol>
 
