include new problems

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     Докажите, что $\angle I_A H I_B = 90^\circ$
                 </li>
                 <li>
-                    Докажите, что $\angle I_A С I_B = 45^\circ$
+                    Докажите, что $\angle I_A C I_B = 45^\circ$
                 </li>
             </ol>
         </li>
