--- a/index.html
+++ b/index.html
@@ -46,7 +46,40 @@
             Пусть $r_B$, $r_A$, $r$ -- радиусы окружностей, вписанных в $\triangle HBC$, $\triangle HAC$, $ABC$ соответственно. 
             <ol>
                 <li>
-                     Докажите, что $\triangle ABC \sim \CBH \sim ACH$.
+                    Докажите, что $\triangle ABC$, $ \triangle \CBH$,  $\triangle ACH$ подобны. Чему равны коэффициенты подобия?
+                </li>
+                <li>
+                    Докажите теорему Пифагора, используя результат предыдущей задачи.
+                </li>
+                <li>
+                    Докажите, что $r^2 = r_A^2 + r_B^2$.
+                </li>
+            </ol>
+        </li>
+        <li>
+            Пусть $I$ -- центр вписанной в $\triangle ABC$ окружности, $AB = c$, $BC = a$, $AC = b$.
+            <ol>
+                <li>
+                    Докажите, что $AI = \sqrt{2} r$.
+                </li>
+                <li>
+                    Докажите, что $r = \frac{a+b-c}{2}$ (обратите внимание на точки касания, запишите равенство отрезков касательных, проведите радиусы к точке касания, найдите квадратик).
+                </li>
+                <li>
+                    Докажите, что $AI^2 = HI_A^2 + HI_B^2$ (вспомните результат задачи 2.3).
+                </li>
+                <li>
+                    Докажите, что $AI = I_AI_B$ (используйте предыдущую задачу и задачу 1.1).
+                </li>
+            </ol>
+        </li>
+        <li>
+            <ol>
+                <li>
+                    Докажите, что $\triangle I_A I_B H$ подобен $\triangle ABC$ (вспомните задачу 1.1 и задачи 3 и 4). 
+                </li>
+                <li>
+                    Найдите коэффициент подобия треугольников из предыдущей задачи.
                 </li>
             </ol>
         </li>
