--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Пусть $r_B$, $r_A$, $r$ -- радиусы окружностей, вписанных в $\triangle HBC$, $\triangle HAC$, $ABC$ соответственно. 
             <ol>
                 <li>
-                    Докажите, что $\triangle ABC$, $ \triangle \CBH$,  $\triangle ACH$ подобны. Чему равны коэффициенты подобия?
+                    Докажите, что $\triangle ABC$, $ \triangle CBH$,  $\triangle ACH$ подобны. Чему равны коэффициенты подобия?
                 </li>
                 <li>
                     Докажите теорему Пифагора, используя результат предыдущей задачи.
