add spoiler and problems

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
                     Докажите, что $AI = \sqrt{2} r$.
                 </li>
                 <li>
-                    Докажите, что $r = \frac{a+b-c}{2}$ (обратите внимание на точки касания, запишите равенство отрезков касательных, проведите радиусы к точке касания, найдите квадратик).
+                    Докажите, что $r = \frac{a+b-c}{2}$
+                    <details>
+                        <summary><strong>Подсказка:</strong></summary>
+                        обратите внимание на точки касания, запишите равенство отрезков касательных, проведите радиусы к точке касания, найдите квадратик.
+                    </details>
                 </li>
                 <li>
                     Докажите, что $AI^2 = HI_A^2 + HI_B^2$ (вспомните результат задачи 2.3).
@@ -80,6 +84,24 @@
                 </li>
                 <li>
                     Найдите коэффициент подобия треугольников из предыдущей задачи.
+                </li>
+                <li>
+                    Если есть два подобных треугольника на плоскости, то иногда один из них можно "повернуть" так, чтобы соответственные стороны стали параллельны. На сколько градусов "повернут" $\triangle I_A I_B H$ относительно $\triangle ABC$, если $\angle ABC = \alpha$?
+                </li>
+                <li>
+                    Докажите, что угол между прямыми $I_AI_B$ и $BC$ составляет $45^\circ$.
+                </li>
+
+                Результат последней задачи можно сформулировать очень красиво:
+                <blockquote>
+                    Прямая $I_AI_B$ отсекает от треугольника $ABC$ равнобедренный прямоугольный треугольник.
+                </blockquote>
+            </ol>
+        </li>
+        <li>
+            <ol>
+                <li>
+
                 </li>
             </ol>
         </li>
