--- a/index.html
+++ b/index.html
@@ -87,10 +87,17 @@
                 </li>
                 <li>
                     Докажите, что $r = \frac{a+b-c}{2}$
-                    <details>
-                        <summary><strong>Подсказка:</strong></summary>
-                        обратите внимание на точки касания, запишите равенство отрезков касательных, проведите радиусы к точке касания, найдите квадратик.
-                    </details>
+                    <div width="20%">
+                        <dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
+                            <dt>Подсказка:</dt>
+                            <dd>
+                                <div style="display:none;">
+                                    <br /> обратите внимание на точки касания, запишите равенство отрезков касательных, проведите радиусы к точке касания, найдите квадратик.
+
+                                </div>
+                            </dd>
+                        </dl>
+                    </div>
                 </li>
                 <li>
                     Докажите, что $AI^2 = HI_A^2 + HI_B^2$ (вспомните результат задачи 2.3).
