--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </li>
                 <li>
                     Докажите, что $r = \frac{a+b-c}{2}$
-                    <div width="20%">
+                    <div width="400px">
                         <dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
                             <dt>Подсказка:</dt>
                             <dd>
