--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         .spoiler {
             width: 400px;
         }
+
+        blockquote {
+            outline: 2px solid #000;
+        }
     </style>
 
 </head>
@@ -165,15 +169,6 @@
             </ol>
         </li>
     </ol>
-
-<dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
-<dt>Spoiler:</dt><dd><div style="display:none;"><br />lo que va entre el spoiler</div></dd></dl>
-
-<dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
-<dt>Spoiler:</dt><dd><div style="display:none;"><br />lo que va entre el spoiler</div></dd></dl>
-
-<dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
-<dt>Spoiler:</dt><dd><div style="display:none;"><br />lo que va entre el spoiler</div></dd></dl>
 
 </div>
     <script>
