--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         }
 
         blockquote {
-            outline: 2px solid #000;
+            outline: 10px solid #000;
+            outline: 8px solid #fff;   
         }
     </style>
 
