--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         blockquote {
             outline: 10px solid #000;
-            outline: 8px solid #fff;   
+            border: 8px solid #fff;   
         }
     </style>
 
