--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         }
 
         blockquote {
-            outline: 10px solid #000;
-            border: 8px solid #fff;   
+            outline: 2px solid #000;
+            padding: 10px;   
         }
     </style>
 
