--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
         blockquote {
             outline: 2px solid #000;
-            padding: 10px;   
+            padding: 10px;
+            width: 400px;   
         }
     </style>
 
@@ -144,7 +145,17 @@
         <li>
             <ol>
                 <li>
-                    Докажите, что $\triangle I_A I_B H$ подобен $\triangle ABC$ (вспомните задачу 1.1 и задачи 3 и 4). 
+                    Докажите, что $\triangle I_A I_B H$ подобен $\triangle ABC$
+                    <div class="spoiler">
+                        <dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
+                            <dt>Подсказка:</dt>
+                            <dd>
+                                <div style="display:none;">
+                                    <br /> вспомните задачу 1.1 и задачи 3 и 4.
+                                </div>
+                            </dd>
+                        </dl>
+                    </div>
                 </li>
                 <li>
                     Найдите коэффициент подобия треугольников из предыдущей задачи.
@@ -163,10 +174,34 @@
             </ol>
         </li>
         <li>
+            Пусть $I_AI_B$ пересекается с $AC$ в точке $A'$, а с $BC$  в точке $B'$. В предыдущем пункте мы доказали, что $\triangle A'B'C$ -- прямоугольный равнобедренный.
             <ol>
                 <li>
-
+                    Докажите, что $B'C = A'C = HC$.
+                    <div class="spoiler">
+                        <dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
+                            <dt>Подсказка:</dt>
+                            <dd>
+                                <div style="display:none;">
+                                    <br /> Рассмотрите треугольники $I_B H C$ и $I_B B' C$ -- они равны!. 
+                                </div>
+                            </dd>
+                        </dl>
+                    </div>                    
                 </li>
+                <li>
+                    Докажите, что площадь треугольника $A'B'C$ не превосходит половины площади треугольника $ABC$.
+                </li>
+                    <div class="spoiler">
+                        <dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
+                            <dt>Подсказка:</dt>
+                            <dd>
+                                <div style="display:none;">
+                                    <br /> Используйте результат предыдущей задачи и выразите площади треугольников через катеты $AC$ и $BC$.
+                                </div>
+                            </dd>
+                        </dl>
+                    </div>                    
             </ol>
         </li>
     </ol>
