--- a/index.html
+++ b/index.html
@@ -191,7 +191,6 @@
                 </li>
                 <li>
                     Докажите, что площадь треугольника $A'B'C$ не превосходит половины площади треугольника $ABC$.
-                </li>
                     <div class="spoiler">
                         <dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
                             <dt>Подсказка:</dt>
@@ -201,7 +200,9 @@
                                 </div>
                             </dd>
                         </dl>
-                    </div>                    
+                    </div>
+                    Последняя задача -- задача с Международной олимпиады. 
+                </li>
             </ol>
         </li>
     </ol>
