--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div id="test">
 
     <p>
-    Пусть $ABC$ -- правильный треугольник с прямым углом $C$, $H$ -- основание высоты, опущенной на гипотенузу, $I_B$ и $I_A$ -- центры окружностей, вписанных в треугольники $HBC$ и $HAC$ соответственно.
+    Пусть $ABC$ -- треугольник с прямым углом $C$, $H$ -- основание высоты, опущенной на гипотенузу, $I_B$ и $I_A$ -- центры окружностей, вписанных в треугольники $HBC$ и $HAC$ соответственно.
     <p>
 
 
@@ -172,6 +172,29 @@
                     <i>Прямая $I_AI_B$ отсекает от треугольника $ABC$ равнобедренный прямоугольный треугольник.</i>
                 </blockquote>
             </ol>
+        </li>
+        <li>
+        	<ol>
+        		<li>
+        			Докажите, что $\angle I_A I I_B = 135^\circ$.	
+        		</li>
+        		<li>
+        			Докажите, что $CI_A \perp BI_B$.	
+        		</li>
+        		<li>
+        			Докажите, что $AI \perp I_AI_$B	
+                    <div class="spoiler">
+                        <dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
+                            <dt>Подсказка:</dt>
+                            <dd>
+                                <div style="display:none;">
+                                    <br /> Аналогично прошлой задаче докажите, что $CI_B \perp AI_A$, а потом воспользуйтесь тем, что высоты пересекаются в одной точке. 
+                                </div>
+                            </dd>
+                        </dl>
+                    </div>      
+        		</li>
+        	</ol>
         </li>
         <li>
             Пусть $I_AI_B$ пересекается с $AC$ в точке $A'$, а с $BC$  в точке $B'$. В предыдущем пункте мы доказали, что $\triangle A'B'C$ -- прямоугольный равнобедренный.
