--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         			Докажите, что $CI_A \perp BI_B$.	
         		</li>
         		<li>
-        			Докажите, что $AI \perp I_AI_$B	
+        			Докажите, что $AI \perp I_AI_B$	
                     <div class="spoiler">
                         <dl class="codebox" style="cursor: pointer;" onclick="this.getElementsByTagName('div')[0].style.display=((this.getElementsByTagName('div')[0].style.display=='none')?'':'none');">
                             <dt>Подсказка:</dt>
